# OtherPrivateLib

QProjectTest01/: CMakeLists.txt  MyMainWindow.cpp  MyMainWindow.h
TestCode/QProjectTest01/: main.cpp
iNote/: BaseType.h  INoteTreeClass.cpp  INoteTreeClass.h  Qleftwidget.ui  Qrightwidget.ui  iNote.pro  iNote.sln  iNote.vcxproj  iNote.vcxproj.filters  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qleftwidget.cpp  qleftwidget.h  qleftwindget.h  qrightwidget.cpp  qrightwidget.h  qrightwidget2.cpp  qrightwidget2.h  qrightwidget2.ui  qselfitem.cpp  qselfitem.h  qselflistwidget.cpp  qselflistwidget.h  qselfplaintextedit.cpp  qselfplaintextedit.h  res.qrc  stylesheet.qss  ui_Qleftwidget.h  ui_Qrightwidget.h  ui_mainwindow.h  ui_qrightwidget2.h
